use URI.create instead of deprecated new URL()