@@ -17,6 +17,7 @@
 package org.apache.camel.test.infra.pinecone.services;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 
@@ -105,7 +106,7 @@ public class PineconeLocalContainerInfraService implements PineconeInfraService,
     public String getPineconeHost() {
         URL url = null;
         try {
-            url = new URL(container.getEndpoint());
+            url = URI.create(container.getEndpoint()).toURL();
         } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
@@ -116,7 +117,7 @@ public class PineconeLocalContainerInfraService implements PineconeInfraService,
     public int getPineconePort() {
         URL url = null;
         try {
-            url = new URL(container.getEndpoint());
+            url = URI.create(container.getEndpoint()).toURL();
         } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
